--- a/blog.html
+++ b/blog.html
@@ -230,6 +230,20 @@
 						</div>
 					</section>
 
+					<!-- Sixteen -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 16 - Merchant Focus, Physical Stores</h2>
+							<p>Last week we had some great results - both qualitative and quantitative insights. <a href="https://www.nngroup.com/articles/why-you-only-need-to-test-with-5-users/">Nielsen (2000)</a> and Co. says 5 is the ideal number of user tests for quick heuristics to work out the majority of kinks before diminishing returns.</p>
+							<ul class="actions vertical">
+								<li><a href="week16.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/testing1.jpg" alt="" />
+						</div>
+					</section>
+
 					
 
 				<!-- Footer -->
