--- a/HMConfirm.html
+++ b/HMConfirm.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-	<title>H&M - Info</title>
+	<title>H&M - Confirm</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -97,52 +97,34 @@
 			<div class="inner medium">
 				<form action="/action_page.php">
 					<div class="row">
-						<div class="col-25">
-							<div class="container">
-								<h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
-								<p><a href="#">Stoneware Pitcher</a> <span class="price">$24.99</span></p>
-								<hr>
-								<p>Total <span class="price" style="color:black"><b>$28.98</b></span></p>
-							</div>
-						</div>
-
 						<div class="col-75">
 							<div class="container">
-							<h3>My Information</h3>
+							<h3>My Information<span style="float:right; text-decoration: underline; font-size: 18px"><img src="hm/MCcheck.png"><a href="#">Edit</a></span></h3>
+
 								<div class="row">
 									<div class="col-50">
-										<label for="fname"> First Name</label>
-										<input type="text" id="fname" name="firstname" placeholder="John">
+										<label for="fname"> Name</label>
+										<span>John Doe</span>
 									</div>
 									<div class="col-50">
-										<label for="lname"> Last Name</label>
-										<input type="text" id="lname" name="lastname" placeholder="Doe">
+										<label for="lname"> Email</label>
+										<span>john@example.com</span>
 									</div>
 								</div>
-								<label for="email"> Email</label>
-								<input type="text" id="email" name="email" placeholder="john@example.com">
 							</div>
 
 							<div class="container">
 								<h3>Shipping</h3>
-								<label for="adr"> Address</label>
-								<input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
-								<label for="city"> City</label>
-								<input type="text" id="city" name="city" placeholder="New York">
-
 								<div class="row">
 									<div class="col-50">
-										<label for="state">State</label>
-										<input type="text" id="state" name="state" placeholder="NY">
+										<label for="adr">Shipping Address</label>
+										<span>542 W. 15th Street</span>
 									</div>
 									<div class="col-50">
-										<label for="zip">Zip</label>
-										<input type="text" id="zip" name="zip" placeholder="10001">
+										<label>Shipping Method</label>
+										<span>Free shipping: 5-7 days</span>
 									</div>
 								</div>
-
-								<label>Shipping Method</label>
-								<input type="checkbox" checked="checked" name="shipping">Free shipping: 5-7 days
 							</div>
 
 							<div class="container">
@@ -150,26 +132,33 @@
 								<div class="row">
 									<div class="col-50">
 										<label for="cname">Name on Card</label>
-										<input type="text" id="cname" name="cardname" placeholder="John More Doe">
+										<span>John More Doe</span>
 									</div>
 									<div class="col-50">
 										<label for="ccnum">Credit card number</label>
-										<input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+										<span>Mastercard XXXX XXXX XXXX 4444</span>
 									</div>
 								</div>
+								<br>
 								<div class="row">
 									<div class="col-50">
 										<label for="exp">Expiration Date</label>
-										<input type="text" id="exp" name="exp" placeholder="MM/YYYY">
+										<span>10/2022</span>
 									</div>
 									<div class="col-50">
-										<label for="cvv">CVV</label>
-										<input type="text" id="cvv" name="cvv" placeholder="352">
+										<label for="baddress">Billing Address</label>
+										<span>542 W. 15th Street</span>
 									</div>
 								</div>
-								<label>
-									<input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
-								</label>
+							</div>
+						</div>
+
+						<div class="col-25">
+							<div class="container">
+								<h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
+								<p><a href="#">Stoneware Pitcher</a> <span class="price">$24.99</span></p>
+								<hr>
+								<p>Total <span class="price" style="color:black"><b>$28.98</b></span></p>
 							</div>
 						</div>
 					</div>
