--- a/HM_FillInfo.html
+++ b/HM_FillInfo.html
@@ -6,88 +6,17 @@
 -->
 <html>
 <head>
-	<title>H&M - Confirm</title>
+	<title>H&M - Info</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-	<style>
-		.row {
-			display: -ms-flexbox; /* IE10 */
-			display: flex;
-			-ms-flex-wrap: wrap; /* IE10 */
-			flex-wrap: wrap;
-			margin: 0 -16px;
-		}
-
-		.col-25 {
-			-ms-flex: 25%; /* IE10 */
-			flex: 25%;
-		}
-
-		.col-50 {
-			-ms-flex: 50%; /* IE10 */
-			flex: 50%;
-		}
-
-		.col-75 {
-			-ms-flex: 75%; /* IE10 */
-			flex: 75%;
-		}
-
-		.col-25,
-		.col-50,
-		.col-75 {
-			padding: 0 16px;
-		}
-
-		.container {
-			background-color: #f2f2f2;
-			padding: 20px;
-			border: 1px solid lightgrey;
-			border-radius: 3px;
-			margin: 30px 0;
-		}
-
-		input[type=text] {
-			width: 100%;
-			margin-bottom: 20px;
-			padding: 12px;
-			border: 1px solid #ccc;
-			border-radius: 3px;
-		}
-
-		input[type="checkbox"] {
-			-webkit-appearance: checkbox;
-			opacity: 100;
-			margin-right: 2px;
-		}
-
-		label {
-			margin-bottom: 10px;
-			display: block;
-		}
-
-		.icon-container {
-			margin-bottom: 20px;
-			padding: 7px 0;
-			font-size: 24px;
-		}
-
-		@media (max-width: 800px) {
-			.row {
-				flex-direction: column-reverse;
-			}
-			.col-25 {
-				margin-bottom: 20px;
-			}
-		}
-	</style>
+	<link rel="stylesheet" href="hm/hmstyle.css"/>
 </head>
 <body>
 
 	<div class="topnav" id="myTopnav">
-		<img src="hm/checkHeader.png">
+		<img style="width: 100%;" src="hm/checkHeader.png">
 	</div>
 
 	<!-- Wrapper -->
@@ -99,70 +28,89 @@
 					<div class="row">
 						<div class="col-75">
 							<div class="container">
-							<h3>My Information<span style="float:right; text-decoration: underline; font-size: 18px"><img src="hm/MCcheck.png"><a href="#">Edit</a></span></h3>
-
+								<h3>MY INFORMATION</h3>
+								<hr>
 								<div class="row">
 									<div class="col-50">
-										<label for="fname"> Name</label>
-										<span>John Doe</span>
+										<label for="fname"> First Name</label>
+										<input type="text" id="fname" name="firstname" placeholder="John">
 									</div>
 									<div class="col-50">
-										<label for="lname"> Email</label>
-										<span>john@example.com</span>
+										<label for="lname"> Last Name</label>
+										<input type="text" id="lname" name="lastname" placeholder="Doe">
 									</div>
 								</div>
+								<label for="email"> Email</label>
+								<input type="text" id="email" name="email" placeholder="john@example.com">
 							</div>
 
 							<div class="container">
-								<h3>Shipping</h3>
+								<h3>SHIPPING</h3>
+								<hr>
+								<label for="adr"> Address</label>
+								<input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
+								<label for="city"> City</label>
+								<input type="text" id="city" name="city" placeholder="New York">
+
 								<div class="row">
 									<div class="col-50">
-										<label for="adr">Shipping Address</label>
-										<span>542 W. 15th Street</span>
+										<label for="state">State</label>
+										<input type="text" id="state" name="state" placeholder="NY">
 									</div>
 									<div class="col-50">
-										<label>Shipping Method</label>
-										<span>Free shipping: 5-7 days</span>
+										<label for="zip">Zip</label>
+										<input type="text" id="zip" name="zip" placeholder="10001">
 									</div>
 								</div>
+
+								<label>Shipping Method</label>
+								<label><input type="checkbox" checked="checked" name="shipping">Free shipping: 5-7 days
+								</label>
 							</div>
 
 							<div class="container">
-								<h3>Payment</h3>
+								<h3>PAYMENTS</h3>
+								<hr>
 								<div class="row">
 									<div class="col-50">
 										<label for="cname">Name on Card</label>
-										<span>John More Doe</span>
+										<input type="text" id="cname" name="cardname" placeholder="John More Doe">
 									</div>
 									<div class="col-50">
 										<label for="ccnum">Credit card number</label>
-										<span>Mastercard XXXX XXXX XXXX 4444</span>
+										<input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
 									</div>
 								</div>
-								<br>
 								<div class="row">
 									<div class="col-50">
 										<label for="exp">Expiration Date</label>
-										<span>10/2022</span>
+										<input type="text" id="exp" name="exp" placeholder="MM/YYYY">
 									</div>
 									<div class="col-50">
-										<label for="baddress">Billing Address</label>
-										<span>542 W. 15th Street</span>
+										<label for="cvv">CVV</label>
+										<input type="text" id="cvv" name="cvv" placeholder="352">
 									</div>
 								</div>
+								<label>
+									<input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
+								</label>
 							</div>
 						</div>
 
 						<div class="col-25">
 							<div class="container">
-								<h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
-								<p><a href="#">Stoneware Pitcher</a> <span class="price">$24.99</span></p>
+								<h3>ORDER SUMMARY</h3>
 								<hr>
-								<p>Total <span class="price" style="color:black"><b>$28.98</b></span></p>
+								<p>Order Value <span class="price" style="color:black; float: right;"><b>$24.99</b></span></p>
+								<p>Shipping <span class="price" style="color:black; float: right;"><b>$0.00</b></span></p>
+								<p>Estimated Tax <span class="price" style="color:black; float: right;"><b>$3.99</b></span></p>
+								<br>
+								<p><b>Total <span class="price" style="color:black; float: right;">$28.98</b></span></p>
 							</div>
 						</div>
 					</div>
-					<input type="submit" value="Complete Purchase" class="btn">
+					<p><i class="fa fa-lock" style="margin: 0px 10px;"></i>All data will be encrypted.</p>
+					<input type="submit" value="Complete Purchase" class="btn" style="margin: 20px 20px 0px 0px"> <b>Total: $28.98</b>
 				</form>
 
 			</div>
