added ca components

--- a/HM_CAInfo.html
+++ b/HM_CAInfo.html
@@ -27,12 +27,20 @@
 				<form action="/action_page.php">
 					<div class="row">
 						<div class="col-75">
-							<div class="container">
-								<p>Your information is autofilled with <img style="height: 25px; vertical-align: middle;margin-left: .5rem;" src="hm/MC.png"></p>
-							</div>
+
+							<!-- opt out -->
+<!-- 							<div class="container">
+								<h3>Your information is autofilled with <img style="height: 25px; vertical-align: middle;margin-left: .5rem;" src="hm/MC.png"></h3>
+								<p><a href="" style="color: #000;">< Go back to normal checkout.</a></p>
+								<p style="font-size: .8rem;opacity:0.5;"><a href="">Learn more</a> or change the <a href="">settings</a>.</p>
+							</div> -->
 
 							<div class="container">
-							<h3>MY INFORMATION<span style="float:right; text-decoration: underline; font-size: 18px"><img style="margin-right: 20px" src="hm/MCcheck.png"><a href="#">Edit</a></span></h3>
+							<h3>MY INFORMATION
+								<!-- ca filled indicator -->
+								<span style="float:right; text-decoration: underline; font-size: 18px"><!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
+									<a href="#">Edit</a></span>
+							</h3>
 							<hr>
 								<div class="row">
 									<div class="col-50 filledtext">
@@ -47,7 +55,10 @@
 							</div>
 
 							<div class="container">
-								<h3>SHIPPING<span style="float:right; text-decoration: underline; font-size: 18px"><img style="margin-right: 20px" src="hm/MCcheck.png"><a href="#">Edit</a></span></h3>
+								<h3>SHIPPING
+									<span style="float:right; text-decoration: underline; font-size: 18px"><!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
+										<a href="#">Edit</a></span>
+									</h3>
 								<hr>
 								<div class="row">
 									<div class="col-50 filledtext">
@@ -62,7 +73,10 @@
 							</div>
 
 							<div class="container">
-								<h3>PAYMENTS<span style="float:right; text-decoration: underline; font-size: 18px"><img style="margin-right: 20px" src="hm/MCcheck.png"><a href="#">Edit</a></span></h3>
+								<h3>PAYMENTS
+									<span style="float:right; text-decoration: underline; font-size: 18px"><!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
+										<a href="#">Edit</a></span>
+								</h3>
 								<hr>
 								<div class="row">
 									<div class="col-50 filledtext">
@@ -100,7 +114,7 @@
 							</div>
 						</div>
 					</div>
-					<p><i class="fa fa-lock" style="margin: 0px 10px;"></i>All data will be encrypted.</p>
+					<p><i class="fa fa-lock"></i>All data will be encrypted.</p>
 					<input type="submit" value="Complete Purchase" class="btn" style="margin: 20px 20px 0px 0px"> <b>Total: $28.98</b>
 				</form>
 
