--- a/HM_FillInfo.html
+++ b/HM_FillInfo.html
@@ -27,6 +27,35 @@
 				<form action="/action_page.php">
 					<div class="row">
 						<div class="col-75">
+
+							<!-- Opt in option 1 -->
+<!-- 							<div class="container-ca">
+								<img style="height: 40px" src="hm/MC.png">
+								<p>Mastercard Instant Checkout has saved your card and shipping details from past purchases. You can now autofill the information whenever Mastercard is able to verify that your online behavior looks like you. <a href="#">Learn More</a></p>
+								<button class="button-ca" style="margin: 20px 0 0;"><i class="fa fa-lock"></i>sign me up and Autofill</button>
+								<p>You can always <a href="">opt out</a> or change the <a href="">settings</a>.</p>
+								<label style="color: lightgray;margin-top: .8rem;">
+									<input type="checkbox" name="sameadr"> Don't show this again.
+								</label>
+							</div> -->
+
+							<!-- Learn more popup -->
+<!-- 							<div class="container">
+								<img style="height: 40px" src="hm/MC.png">
+								<hr>
+								<div class="row">
+									<div class="col-50">
+										<div class="row">
+											<img src="hm/autofill.png">
+											<p>Mastercard Instant Checkout autofills your card and shipping details for easier checkout.</p>
+										</div>
+									</div>
+									<div class="col-50">
+										<img src="hm/GIF.png">
+									</div>
+								</div>
+							</div> -->
+
 							<div class="container">
 								<h3>MY INFORMATION</h3>
 								<hr>
@@ -107,6 +136,16 @@
 								<br>
 								<p><b>Total <span class="price" style="color:black; float: right;">$28.98</b></span></p>
 							</div>
+
+							<!-- Opt in option 2 -->
+<!-- 							<div class="container-ca">
+								<img style="height: 40px" src="hm/MC.png"><br>
+								<a href="#">Learn More</a><br>
+								<button class="button-ca" style="margin: 20px 0 0;"><i class="fa fa-lock"></i>Autofill</button>
+								<label style="color: lightgray;margin-top: .8rem;">
+									<input type="checkbox" name="sameadr"> Don't show this again.
+								</label>
+							</div> -->
 						</div>
 					</div>
 					<p><i class="fa fa-lock" style="margin: 0px 10px;"></i>All data will be encrypted.</p>
