--- a/HM_CAInfo.html
+++ b/HM_CAInfo.html
@@ -19,12 +19,13 @@
 
 <body>
 
-	<!-- step-ups: swipe through images -->
-	<div class="step-up-container">
-		<div class="step-up-window">
+	<!-- step-ups: swipe through images. uncomment the following if receiving image step-up-->
 
+	<!-- <div class="step-up-container">
+		<div class="step-up-window">
+		<img src="hm/img/logo-04.png" width="80px">
 		<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
-		<h3>To protect your account and continue to payment, please swipe through the following items</h3>
+		<h3>To protect your account and continue to payment, please swipe through the following images.</h3>
 			<div class="swipe-pattern-img">
 				<div>
 					<img src="hm/img/img1.jpg">
@@ -46,179 +47,190 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
+
+	<!-- step-ups: draw a star. uncomment the following if receiving pattern step-up-->
+	<div class="step-up-container">
+		<div class="step-up-window">
+			<img src="hm/img/logo-04.png" width="80px">
+			<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
+			<h3>To protect your account and continue to payment, please swipe through the following images.</h3>
+			<div class="draw-canvas">
+
+			</div>
+		</div>
 
 		<!-- enf of step-ups-->
 
-	<div class="topnav" id="myTopnav">
-		<img style="width: 100%;" src="hm/checkHeader.png">
-	</div>
+		<div class="topnav" id="myTopnav">
+			<img style="width: 100%;" src="hm/checkHeader.png">
+		</div>
 
-	<!-- Wrapper -->
-	<div id="wrapper" class="divided">
+		<!-- Wrapper -->
+		<div id="wrapper" class="divided">
 
-		<section class="wrapper style1 align-left">
-			<div class="inner medium">
-				<form action="HM_Confirmation.html">
-					<div class="row">
-						<div class="col-75">
+			<section class="wrapper style1 align-left">
+				<div class="inner medium">
+					<form action="HM_Confirmation.html">
+						<div class="row">
+							<div class="col-75">
 
-							<!-- opt out -->
-							<!-- 							<div class="container">
+								<!-- opt out -->
+								<!-- 							<div class="container">
 								<h3>Your information is autofilled with <img style="height: 25px; vertical-align: middle;margin-left: .5rem;" src="hm/MC.png"></h3>
 								<p><a href="" style="color: #000;">< Go back to normal checkout.</a></p>
 								<p style="font-size: .8rem;opacity:0.5;"><a href="">Learn more</a> or change the <a href="">settings</a>.</p>
 							</div> -->
 
-							<div class="container">
-								<h3>MY INFORMATION
-									<!-- ca filled indicator -->
-									<span style="float:right; text-decoration: underline; font-size: 18px">
-										<!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
-										<a href="#">Edit</a>
-									</span>
-								</h3>
-								<hr>
-								<div class="row">
-									<div class="col-50 filledtext">
-										<label for="fname"> Name</label>
-										<span>John Doe</span>
+								<div class="container">
+									<h3>MY INFORMATION
+										<!-- ca filled indicator -->
+										<span style="float:right; text-decoration: underline; font-size: 18px">
+											<!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
+											<a href="#">Edit</a>
+										</span>
+									</h3>
+									<hr>
+									<div class="row">
+										<div class="col-50 filledtext">
+											<label for="fname"> Name</label>
+											<span>John Doe</span>
+										</div>
+										<div class="col-50 filledtext">
+											<label for="lname"> Email</label>
+											<span>john@example.com</span>
+										</div>
 									</div>
-									<div class="col-50 filledtext">
-										<label for="lname"> Email</label>
-										<span>john@example.com</span>
+								</div>
+
+								<div class="container">
+									<h3>SHIPPING
+										<span style="float:right; text-decoration: underline; font-size: 18px">
+											<!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
+											<a href="#">Edit</a>
+										</span>
+									</h3>
+									<hr>
+									<div class="row">
+										<div class="col-50 filledtext">
+											<label for="adr">Shipping Address</label>
+											<span>542 W. 15th Street</span>
+										</div>
+										<div class="col-50 filledtext">
+											<label>Shipping Method</label>
+											<span>Free shipping: 5-7 days</span>
+										</div>
+									</div>
+								</div>
+
+								<div class="container">
+									<h3>PAYMENTS
+										<span style="float:right; text-decoration: underline; font-size: 18px">
+											<!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
+											<a href="#">Edit</a>
+										</span>
+									</h3>
+									<hr>
+									<div class="row">
+										<div class="col-50 filledtext">
+											<label for="cname">Name on Card</label>
+											<span>John More Doe</span>
+										</div>
+										<div class="col-50 filledtext">
+											<label for="ccnum">Credit card number</label>
+											<span>Mastercard XXXX XXXX XXXX 4444</span>
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="col-50 filledtext">
+											<label for="exp">Expiration Date</label>
+											<span>10/2022</span>
+										</div>
+										<div class="col-50 filledtext">
+											<label for="baddress">Billing Address</label>
+											<span>542 W. 15th Street</span>
+										</div>
 									</div>
 								</div>
 							</div>
 
-							<div class="container">
-								<h3>SHIPPING
-									<span style="float:right; text-decoration: underline; font-size: 18px">
-										<!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
-										<a href="#">Edit</a>
-									</span>
-								</h3>
-								<hr>
-								<div class="row">
-									<div class="col-50 filledtext">
-										<label for="adr">Shipping Address</label>
-										<span>542 W. 15th Street</span>
-									</div>
-									<div class="col-50 filledtext">
-										<label>Shipping Method</label>
-										<span>Free shipping: 5-7 days</span>
-									</div>
-								</div>
-							</div>
-
-							<div class="container">
-								<h3>PAYMENTS
-									<span style="float:right; text-decoration: underline; font-size: 18px">
-										<!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
-										<a href="#">Edit</a>
-									</span>
-								</h3>
-								<hr>
-								<div class="row">
-									<div class="col-50 filledtext">
-										<label for="cname">Name on Card</label>
-										<span>John More Doe</span>
-									</div>
-									<div class="col-50 filledtext">
-										<label for="ccnum">Credit card number</label>
-										<span>Mastercard XXXX XXXX XXXX 4444</span>
-									</div>
-								</div>
-								<br>
-								<div class="row">
-									<div class="col-50 filledtext">
-										<label for="exp">Expiration Date</label>
-										<span>10/2022</span>
-									</div>
-									<div class="col-50 filledtext">
-										<label for="baddress">Billing Address</label>
-										<span>542 W. 15th Street</span>
-									</div>
+							<div class="col-25">
+								<div class="container">
+									<h3>ORDER SUMMARY</h3>
+									<hr>
+									<p>Order Value
+										<span class="price" style="color:black; float: right;">
+											<b>$24.99</b>
+										</span>
+									</p>
+									<p>Shipping
+										<span class="price" style="color:black; float: right;">
+											<b>$0.00</b>
+										</span>
+									</p>
+									<p>Estimated Tax
+										<span class="price" style="color:black; float: right;">
+											<b>$3.99</b>
+										</span>
+									</p>
+									<br>
+									<p>
+										<b>Total
+											<span class="price" style="color:black; float: right;">$28.98</b>
+										</span>
+									</p>
 								</div>
 							</div>
 						</div>
+						<p>
+							<i class="fa fa-lock"></i>All data will be encrypted.</p>
+						<input type="submit" value="Complete Purchase" class="btn" style="margin: 20px 20px 0px 0px">
+						<b>Total: $28.98</b>
+					</form>
 
-						<div class="col-25">
-							<div class="container">
-								<h3>ORDER SUMMARY</h3>
-								<hr>
-								<p>Order Value
-									<span class="price" style="color:black; float: right;">
-										<b>$24.99</b>
-									</span>
-								</p>
-								<p>Shipping
-									<span class="price" style="color:black; float: right;">
-										<b>$0.00</b>
-									</span>
-								</p>
-								<p>Estimated Tax
-									<span class="price" style="color:black; float: right;">
-										<b>$3.99</b>
-									</span>
-								</p>
-								<br>
-								<p>
-									<b>Total
-										<span class="price" style="color:black; float: right;">$28.98</b>
-									</span>
-								</p>
-							</div>
-						</div>
-					</div>
-					<p>
-						<i class="fa fa-lock"></i>All data will be encrypted.</p>
-					<input type="submit" value="Complete Purchase" class="btn" style="margin: 20px 20px 0px 0px">
-					<b>Total: $28.98</b>
-				</form>
-
-			</div>
-		</section>
+				</div>
+			</section>
 
 
 
 
 
-		<!-- Footer -->
-		<footer class="wrapper style1 align-center">
-			<div class="inner">
-				<!-- <ul class="icons">
+			<!-- Footer -->
+			<footer class="wrapper style1 align-center">
+				<div class="inner">
+					<!-- <ul class="icons">
 								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul> -->
-				<p>&copy; Team Mastercard, CMU.</p>
-			</div>
-		</footer>
+					<p>&copy; Team Mastercard, CMU.</p>
+				</div>
+			</footer>
 
-	</div>
+		</div>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script type="text/javascript" src="hm/slick.min.js"></script>
-	<script>
-		$(document).ready(function () {
-			$('.swipe-pattern-img').slick({
-				centerMode: true,
-				centerPadding: '20px',
-				slidesToShow: 1,
-				dots: true,
-				arrows: false
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script type="text/javascript" src="hm/slick.min.js"></script>
+		<script>
+			$(document).ready(function () {
+				$('.swipe-pattern-img').slick({
+					centerMode: true,
+					centerPadding: '20px',
+					slidesToShow: 1,
+					dots: true,
+					arrows: false
+				});
 			});
-		});
-	</script>
+		</script>
 
 
 </body>
