--- a/HM_CAInfo.html
+++ b/HM_CAInfo.html
@@ -79,7 +79,7 @@
 		<div class="step-up-window-email">
 			<img src="hm/img/logo-04.png" width="80px">
 			<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
-			<h3>A link has been sent to your email at zo******@gmail.com. <br>Please click the link to proceed. 
+			<h3>A link has been sent to your email at zo******@gmail.com. <br>Please click the link to proceed.
 				</h3>
 		</div>
 	</div> -->
@@ -108,7 +108,7 @@
 
 							<div class="container">
 								<h3>MY INFORMATION
-									<!-- ca filled indicator -->
+									<!-- ca filled indicator: uncomment the following images when using autofill -->
 									<span style="float:right; text-decoration: underline; font-size: 18px">
 										<!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
 										<a href="#">Edit</a>
