--- a/HM_FillInfo.html
+++ b/HM_FillInfo.html
@@ -95,10 +95,15 @@
 								<label>Shipping Method</label>
 								<label><input type="checkbox" checked="checked" name="shipping">Free shipping: 5-7 days
 								</label>
+
+                <label>Shipping Method</label>
+                <label><input type="checkbox" checked="checked" name="shipping">Free shipping: 5-7 days
+                </label>
+
 							</div>
 
 							<div class="container">
-								<h3>PAYMENTS</h3>
+								<h3>PAYMENT INFORMATION</h3>
 								<hr>
 								<div class="row">
 									<div class="col-50">
@@ -106,7 +111,7 @@
 										<input type="text" id="cname" name="cardname" placeholder="John More Doe">
 									</div>
 									<div class="col-50">
-										<label for="ccnum">Credit card number</label>
+										<label for="ccnum">Card Number</label>
 										<input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
 									</div>
 								</div>
@@ -115,14 +120,16 @@
 										<label for="exp">Expiration Date</label>
 										<input type="text" id="exp" name="exp" placeholder="MM/YYYY">
 									</div>
-									<div class="col-50">
+									<!-- <div class="col-50">
 										<label for="cvv">CVV</label>
 										<input type="text" id="cvv" name="cvv" placeholder="352">
-									</div>
+									</div> -->
 								</div>
 								<label>
 									<input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
 								</label>
+                <label><input type="checkbox" checked="checked" name="shipping">I agree to let H&M process my personal data in order to manage my personal account, in accordance with H&M's Privacy Notice.  
+                </label>
 							</div>
 						</div>
 
