added form validation
all fields are now required. email, card num, expiration have format validation

--- a/HM.html
+++ b/HM.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Team Mastercard: Weeknotes 16</title>
+	<title>Stone Pitcher - Brown | H&M USA</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<hr class="cart-divide">
-		<div class="cart-des-low"> 
+		<div class="cart-des-low">
 		<table>
 			<tr>
 				<td>ORDER VALUE</td>
@@ -180,7 +180,7 @@
 				popup.classList.toggle("show");
 			}
 			</script>
-			
+
 </body>
 
 </html>
