--- a/HM_CAInfo.html
+++ b/HM_CAInfo.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>H&M - CAInfo</title>
+	<title>Checkout | H&M USA</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 <body>
 
-	<!-- step-ups: swipe through images. uncomment the following for receiving image step-up-->
+	<!-- step-ups-1: swipe through images. uncomment the following for receiving image step-up-->
 
 	<!-- <div class="step-up-container">
 		<div class="step-up-window">
@@ -49,21 +49,21 @@
 		</div>
 	</div> -->
 
-	<!-- step-ups: draw a star. uncomment the following for receiving pattern step-up-->
+	<!-- step-ups-2: draw a star. uncomment the following for receiving pattern step-up-->
 
-	<!-- <div class="step-up-container">
+<!-- 	<div class="step-up-container">
 		<div class="step-up-window">
 			<img src="hm/img/logo-04.png" width="80px">
 			<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
-			<h3>Please draw a start in the square below.</h3>
+			<h3>Please draw a star in the square below.</h3>
 			<div id="draw-canvas">
 			</div>
 		</div>
 	</div> -->
 
-	<!-- step-ups: circle object of interest. uncomment the following for circle object of interest step-up-->
+	<!-- step-ups-3: circle object of interest. uncomment the following for circle object of interest step-up-->
 
-	<!-- <div class="step-up-container">
+<!-- 	<div class="step-up-container">
 		<div class="step-up-window">
 			<img src="hm/img/logo-04.png" width="80px">
 			<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
@@ -73,9 +73,9 @@
 		</div>
 	</div> -->
 
-	<!-- step-ups: email link. uncomment the following for email link step-up-->
+	<!-- step-ups-4: email link. uncomment the following for email link step-up-->
 
-	<!-- <div class="step-up-container">
+<!-- 	<div class="step-up-container">
 		<div class="step-up-window-email">
 			<img src="hm/img/logo-04.png" width="80px">
 			<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
@@ -86,9 +86,11 @@
 
 	<!-- enf of step-ups-->
 
-	<div class="topnav" id="myTopnav">
-		<img style="width: 100%;" src="hm/checkHeader.png">
+	<div class="hmlogo">
+		<img src="images/hm/hmlogo.jpg" width="100px">
 	</div>
+
+	<hr class="hm-divide">
 
 	<!-- Wrapper -->
 	<div id="wrapper" class="divided">
@@ -100,17 +102,17 @@
 						<div class="col-75">
 
 							<!-- opt out -->
-							<!-- 							<div class="container">
+							<div class="container">
 								<h3>Your information is autofilled with <img style="height: 25px; vertical-align: middle;margin-left: .5rem;" src="hm/MC.png"></h3>
 								<p><a href="" style="color: #000;">< Go back to normal checkout.</a></p>
 								<p style="font-size: .8rem;opacity:0.5;"><a href="">Learn more</a> or change the <a href="">settings</a>.</p>
-							</div> -->
+							</div>
 
 							<div class="container">
 								<h3>MY INFORMATION
 									<!-- ca filled indicator: uncomment the following images when using autofill -->
 									<span style="float:right; text-decoration: underline; font-size: 18px">
-										<!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
+										<img style="margin-right: 20px" src="hm/MCcheck.png">
 										<a href="#">Edit</a>
 									</span>
 								</h3>
@@ -130,7 +132,7 @@
 							<div class="container">
 								<h3>SHIPPING
 									<span style="float:right; text-decoration: underline; font-size: 18px">
-										<!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
+										<img style="margin-right: 20px" src="hm/MCcheck.png">
 										<a href="#">Edit</a>
 									</span>
 								</h3>
@@ -150,7 +152,7 @@
 							<div class="container">
 								<h3>PAYMENTS
 									<span style="float:right; text-decoration: underline; font-size: 18px">
-										<!-- <img style="margin-right: 20px" src="hm/MCcheck.png"> -->
+										<img style="margin-right: 20px" src="hm/MCcheck.png">
 										<a href="#">Edit</a>
 									</span>
 								</h3>
