--- a/HM_Confirmation.html
+++ b/HM_Confirmation.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-	<title>H&M - Confirmation</title>
+	<title>Order Confirmation | H&M USA</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,9 +15,11 @@
 </head>
 <body>
 
-	<div class="topnav" id="myTopnav">
-		<img style="width: 100%;" src="hm/checkHeader.png">
+	<div class="hmlogo">
+		<img src="images/hm/hmlogo.jpg" width="100px">
 	</div>
+
+	<hr class="hm-divide">
 
 	<!-- Wrapper -->
 	<div id="wrapper" class="divided">
@@ -26,7 +28,6 @@
 			<div class="inner medium">
 				<h2>Order Confirmation</h2>
 				<p>Payment Successful! Order number: <a>ADAFJ833334</a></p>
-				<p>Order summary has been sent to <span>john@example.com</span></p>
 				<br>
 				<div class="container">
 					<h3>Shipping Information</h3>
