--- a/HM.html
+++ b/HM.html
@@ -44,7 +44,7 @@
 						<td class="right">$28.98</td>
 					</tr>
 			</table>
-			<div class="checkout-button"><a href="HM_FillInfo.html">CHECKOUT</a></div>
+			<a href="HM_FillInfo.html"></a><div class="checkout-button">CHECKOUT</div></a>
 	</div>
 	</div>
 	<div class="hmlogo">
