Added Walmart pages
Added Walmart pages

--- a/HM.html
+++ b/HM.html
@@ -44,7 +44,7 @@
 						<td class="right">$28.98</td>
 					</tr>
 			</table>
-			<a href="HM_FillInfo.html"></a><div class="checkout-button">CHECKOUT</div></a>
+			<a href="HM_FillInfo.html"><div class="checkout-button">CHECKOUT</div></a>
 	</div>
 	</div>
 	<div class="hmlogo">
