Fixed all step-ups in Walmart page
Fixed all step-ups in Walmart page

--- a/WF_CAInfo.html
+++ b/WF_CAInfo.html
@@ -23,9 +23,9 @@
 
 	<!-- <div class="step-up-container">
 		<div class="step-up-window">
-		<img src="hm/img/logo-04.png" width="80px">
-		<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
-		<h3>Please swipe through the following images.</h3>
+			<img src="hm/img/logo-04.png" width="80px">
+			<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
+			<h3>Please swipe through the following images.</h3>
 			<div class="swipe-pattern-img">
 				<div>
 					<img src="hm/img/img1.jpg">
@@ -51,7 +51,7 @@
 
 	<!-- step-ups-2: draw a star. uncomment the following for receiving pattern step-up-->
 
-<!-- 	<div class="step-up-container">
+	<!-- 	<div class="step-up-container">
 		<div class="step-up-window">
 			<img src="hm/img/logo-04.png" width="80px">
 			<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
@@ -63,7 +63,7 @@
 
 	<!-- step-ups-3: circle object of interest. uncomment the following for circle object of interest step-up-->
 
-<!-- 	<div class="step-up-container">
+	<!-- 	<div class="step-up-container">
 		<div class="step-up-window">
 			<img src="hm/img/logo-04.png" width="80px">
 			<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
@@ -75,7 +75,7 @@
 
 	<!-- step-ups-4: email link. uncomment the following for email link step-up-->
 
-<!-- 	<div class="step-up-container">
+	<!-- 	<div class="step-up-container">
 		<div class="step-up-window-email">
 			<img src="hm/img/logo-04.png" width="80px">
 			<h2>Mastercard Instant Checkout noticed some change in your browsing behavior.</h2>
@@ -103,9 +103,16 @@
 
 							<!-- opt out -->
 							<div class="container">
-								<h3>Your information is autofilled with <img style="height: 25px; vertical-align: middle;margin-left: .5rem;" src="hm/MC.png"></h3>
-								<p><a href="" style="color: #000;">< Go back to normal checkout.</a></p>
-								<p style="font-size: .8rem;opacity:0.5;"><a href="">Learn more</a> or change the <a href="">settings</a>.</p>
+								<h3>Your information is autofilled with
+									<img style="height: 25px; vertical-align: middle;margin-left: .5rem;" src="hm/MC.png">
+								</h3>
+								<p>
+									<a href="" style="color: #000;">
+										< Go back to normal checkout.</a>
+								</p>
+								<p style="font-size: .8rem;opacity:0.5;">
+									<a href="">Learn more</a> or change the
+									<a href="">settings</a>.</p>
 							</div>
 
 							<div class="container">
@@ -260,6 +267,7 @@
 				arrows: false
 			});
 		});
+
 	</script>
 
 
